feat: adds filter structure to search time records
